2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c: Make prototypes unconditional.

2001-09-13  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (try_normal): Permit "rsh" as well as "rlogin" as the
	program name, for detecting when argv[0] is not the hostname.
	If argv[0] isn't the hostname, always replace it with the system
	rlogin pathname.

2001-09-01  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (SRCS): Use $(srcdir).

2001-07-23  Ezra Peisach  <epeisach@mit.edu>

	* setenv.c (setenv): Include stdlib.h for malloc prototypes. 

2001-07-14  Ken Raeburn  <raeburn@mit.edu>

	* v4rcp.c (kstream_create_rcp_from_fd, kstream_create_from_fd):
	Allocate correct amount of space for kstream data.  (Patch from
	Cygnus KerbNet code, 1997.)

2001-07-08  Ezra Peisach  <epeisach@mit.edu>

	* login.c (sigint): Declare static.

2001-07-05  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Link krshd with KRSHDLIBS instead of LOGINLIBS.

	* configure.in: Creare a new variable KRSHDLIBS which differs from
	LOGINLIBS by not including libkrb524.a. Test for getenv.

	* krcp.c: Prototype lostconn().

	* krlogind.c: Provide prototype for signal handler cleanup. Implied
	need to add extra argument to function - ensure consistant
	calling.

	* krsh.c: Provide prototype for signal handler sendsig.

	* krshd.c: Rewrite error() to use stdargs/varargs.
	(doit): When creating a tty name using getpid. Ensure that does
	not overflow tty string buffer.

	* login.c: Provide prototype for signal handler timedout.

	* setenv.c: Do not define getenv() unless needed.

	* v4rcp.c: Rewrite error() to use stdargs/varargs. Add signal
	number argument to lostconn(), include prototype, and ensure
	called consistantly.

2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* v4rcp.c, login.c: Fill in prototypes, declare many functions static. 

2001-06-22  Ezra Peisach  <epeisach@mit.edu>

	* krlogind.c: Provide daemon prototype if needed.

	* configure.in: Test if prototype for daemon necessary.
